Fix code review minor findings M1-M5
M1: Add explanatory comment to DhtValidationException
- Document non-sealed modifier (testing framework compatibility)

M2: Standardize meter creation in MicrometerKerlDhtMetrics
- Convert registry.summary() to DistributionSummary.builder() pattern
- Consistent with Timer and Counter builder patterns

M3: Standardize String formatting in ThothByzantineStateProvider
- Convert String.format() to .formatted() pattern

M4: Enhance defensive copy test in DhtExceptionHierarchyTest
- Verify mutation isolation (original set modification doesn't affect exception)
- Verify returned set is immutable (add() throws UnsupportedOperationException)

M5: Add DistributionSummary test coverage in KerlDhtMetricsTest
- Test quorum respondent count distribution
- Test Byzantine score distribution with mean/max/total validations

All tests pass. Part of Phase 1 code review remediation.

References: Delos-gsq0 (Phase 1 code review findings)